--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "16.2.0",
-    "jquery": "3.3.1",
-    "bootstrap": "4.1.2",
-    "popper.js": "1.14.3",
-    "react-dom": "16.2.0",
     "@types/react": "16.0.31",
-    "@types/react-dom": "16.0.3"
+    "@types/react-dom": "16.0.3",
+    "bootstrap": "4.1.2",
+    "firebase": "^7.8.0",
+    "jquery": "3.3.1",
+    "popper.js": "1.14.3",
+    "react": "16.2.0",
+    "react-dom": "16.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
