--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react": "16.0.31",
     "@types/react-dom": "16.0.3",
     "bootstrap": "4.1.2",
+    "dot-object": "^2.1.2",
     "firebase": "^7.8.0",
     "jquery": "3.3.1",
     "popper.js": "1.14.3",
